<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".A2fActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imvLogoA2f"
            android:layout_width="125sp"
            android:layout_height="125sp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/txtA2f"
            android:layout_width="171dp"
            android:layout_height="89dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/txt_a2f"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtInstructionA2f"
            android:layout_width="276dp"
            android:layout_height="57dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/txt_instruction_a2f"
            android:textAlignment="center"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="46dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputCodeA2f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_code"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnNextA2f"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:textSize="20sp"
            android:text="@string/btn_next" />

        <Button
            android:id="@+id/btnBackA2f"
            style="@style/Base.Theme.MiniChat.SecondaryButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="20sp"
            android:text="@string/btn_back" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>