<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_chats"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="center"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/txt_chats" />

    <EditText
        android:id="@+id/edtSearch"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:hint="@string/input_search"
        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="32sp"
        android:layout_height="32sp"
        android:layout_marginTop="16sp"
        android:layout_marginRight="8sp"
        android:background="@drawable/baseline_search_24"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain" />

    <TextView
        android:id="@+id/txtTrayRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:text="@string/txt_request_tray"
        android:textColor="@color/md_theme_dark_inversePrimary"
        app:layout_constraintEnd_toStartOf="@+id/txtTrayRequestPointer"
        app:layout_constraintTop_toBottomOf="@+id/edtSearch" />

    <TextView
        android:id="@+id/txtTrayRequestPointer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:text="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSearch" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerChats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtTrayRequest" />

</androidx.constraintlayout.widget.ConstraintLayout>